qtpovray (3.80.6~xenial1) xenial; urgency=low

  * Bug 12 - Mosaic preview doesn't draw the preview

 -- Dick Balaska <dick@buckosoft.com>  Thu, 02 Aug 2018 01:14:55 -0400

qtpovray (3.80.5~xenial1) xenial; urgency=low

  * Bug #9 - Clicking the "New" button tries to create a file under the current
    resource, even if that is a file.
  * Bug 10 - Qt sets the locale, which confuses the povray parser which expects
    the "C" locale.
  * Bug 11 - qtpovray doesn't display the progressive passes, like in radiosity
    renders.

 -- Dick Balaska <dick@buckosoft.com>  Thu, 02 Aug 2018 01:14:55 -0400

qtpovray (3.80.4~xenial1) xenial; urgency=low

  * Open image files as images, not useless text
  * Add splash panel with better instructions for newbies
  * Fix bug with closing an editor closes two editors.
  * Fix bug where clicking an error didn't go to the source

 -- Dick Balaska <dick@buckosoft.com>  Tue, 24 Jul 2018 10:55:38 -0400

qtpovray (3.80.3~xenial1) xenial; urgency=low

  * Add .desktop and icon files
  * Cleanup tutorial

 -- Dick Balaska <dick@buckosoft.com>  Sat, 21 Jul 2018 02:17:54 -0400

qtpovray (3.80.2~xenial1) xenial; urgency=low

  * Try to find the POV-Ray help if config is empty.
  * Display the current editor's filename in the title bar.

 -- Dick Balaska <dick@buckosoft.com>  Fri, 20 Jul 2018 05:47:07 -0400

qtpovray (3.80.1~xenial1) xenial; urgency=low

  * Update qtpovray help.
  * Update to povray-3.8.0-alpha.9606898
  * Fix extraneous qWarning()s.

 -- Dick Balaska <dick@buckosoft.com>  Mon, 16 Jul 2018 06:40:44 -0400

qtpovray (3.80.0~xenial1) xenial; urgency=low

  * Initial release. 

 -- Dick Balaska <dick@buckosoft.com>  Tue, 19 Jun 2018 20:27:19 -0400